[gd_scene load_steps=10 format=3 uid="uid://bb052a4d642j4"]

[ext_resource type="Script" path="res://Levels/Level3/level3.gd" id="1_qx3ts"]
[ext_resource type="Texture2D" uid="uid://b24g3340e7fxb" path="res://Levels/Level3/level3.png" id="2_53kgx"]
[ext_resource type="FontVariation" path="res://monaspace.tres" id="3_pl8dh"]
[ext_resource type="Script" path="res://Input/ValInput.gd" id="4_mdjko"]
[ext_resource type="PackedScene" uid="uid://c1kjikt63pkos" path="res://StartPoint/start_point.tscn" id="5_4plkc"]
[ext_resource type="Script" path="res://Buttons/graphButton.gd" id="6_6ycbc"]
[ext_resource type="Script" path="res://Buttons/resetButton.gd" id="7_xhf50"]
[ext_resource type="Script" path="res://Levels/back_button.gd" id="8_431yg"]
[ext_resource type="Script" path="res://Buttons/submitButton.gd" id="9_spsad"]

[node name="Level3" type="Node2D"]

[node name="Level" type="StaticBody2D" parent="."]
collision_mask = 0
script = ExtResource("1_qx3ts")

[node name="LevelTexture" type="TextureRect" parent="Level"]
z_index = -1
offset_right = 1154.0
offset_bottom = 646.0
texture = ExtResource("2_53kgx")

[node name="LevelBounds" type="CollisionPolygon2D" parent="Level"]
physics_interpolation_mode = 1
position = Vector2(159.81, 42.9454)
scale = Vector2(0.806041, 0.91394)
build_mode = 1
polygon = PackedVector2Array(-60.5552, 142.301, 1.47635, 373.17, 58.5454, 215.61, 126.78, 144.489, 207.421, 111.664, 226.031, 83.2162, 230.993, 111.664, 269.453, 209.045, 291.784, 361.134, 331.484, 273.601, 346.372, 169.655, 387.313, 118.229, 434.457, 82.122, 445.623, 51.4854, 506.413, 38.3555, 549.836, 129.171, 589.536, 263.753, 635.439, 180.597, 678.861, 93.0637, 693.749, 124.794, 721.043, 79.9337, 749.577, 42.7321, 795.481, 7.71889, 804.165, -11.9761, 850.068, -17.4469, 923.266, 132.454, 925.747, 155.431, 936.913, 189.35, 961.725, 121.512, 993.982, 73.3687, 1015.07, 142.301, 1060.98, -6.50524, 1101.92, 233.117, 1075.86, 296.578, 1078.34, 339.251, 1034.92, 337.062, 1011.35, 494.622, 976.613, 409.277, 961.725, 501.187, 944.356, 459.609, 912.1, 438.819, 876.122, 495.716, 869.918, 396.147, 853.79, 346.91, 802.924, 228.74, 784.315, 205.763, 770.668, 255, 759.502, 286.731, 757.021, 311.896, 723.524, 390.676, 706.155, 451.949, 683.824, 451.949, 640.402, 567.931, 619.311, 507.752, 588.295, 494.622, 557.279, 461.797, 553.557, 500.093, 515.098, 401.618, 501.451, 433.349, 466.713, 356.757, 461.751, 318.461, 448.104, 341.439, 425.772, 490.245, 389.794, 558.083, 373.666, 541.671, 342.65, 589.814, 326.522, 555.895, 280.618, 547.142, 250.843, 528.541, 243.4, 550.424, 219.828, 509.94, 202.459, 540.577, 166.48, 492.433, 113.133, 396.147, 94.5237, 434.443, 78.3955, 505.563, 54.8235, 559.177, 32.4921, 592.002, 22.5671, 601.85, 2.71698, 607.321, -61.7959, 601.85, -74.2022, 577.778, -146.159, 477.115, -115.143, 272.507)

[node name="RichTextLabel" type="RichTextLabel" parent="Level"]
offset_left = 495.0
offset_top = 543.0
offset_right = 987.0
offset_bottom = 640.0
theme_override_fonts/normal_font = ExtResource("3_pl8dh")
theme_override_font_sizes/normal_font_size = 21
text = "Fill In The Empty Variables 

f(x) =       sin(       x)+       x"

[node name="InputContainer" type="VBoxContainer" parent="Level/RichTextLabel"]
layout_mode = 0
offset_left = 79.0
offset_top = 35.0
offset_right = 166.0
offset_bottom = 76.0

[node name="ValInput" type="LineEdit" parent="Level/RichTextLabel/InputContainer"]
z_index = 6
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_pl8dh")
theme_override_font_sizes/font_size = 21
script = ExtResource("4_mdjko")

[node name="InputContainer2" type="VBoxContainer" parent="Level/RichTextLabel"]
layout_mode = 0
offset_left = 226.0
offset_top = 35.0
offset_right = 313.0
offset_bottom = 76.0

[node name="ValInput" type="LineEdit" parent="Level/RichTextLabel/InputContainer2"]
z_index = 6
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_pl8dh")
theme_override_font_sizes/font_size = 21
script = ExtResource("4_mdjko")

[node name="InputContainer3" type="VBoxContainer" parent="Level/RichTextLabel"]
layout_mode = 0
offset_left = 353.0
offset_top = 36.0
offset_right = 440.0
offset_bottom = 77.0

[node name="ValInput" type="LineEdit" parent="Level/RichTextLabel/InputContainer3"]
z_index = 6
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_pl8dh")
theme_override_font_sizes/font_size = 21
script = ExtResource("4_mdjko")

[node name="WinArea" type="StaticBody2D" parent="Level"]
position = Vector2(1032, 142)
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/WinArea"]
position = Vector2(-183, 51)
polygon = PackedVector2Array(183, 65, 152, -84, 161, 35)

[node name="StartPoint" parent="Level" instance=ExtResource("5_4plkc")]
position = Vector2(98, 400)

[node name="GraphButton" type="Button" parent="Level"]
offset_left = 419.0
offset_top = 576.0
offset_right = 475.0
offset_bottom = 628.0
text = "Graph"
script = ExtResource("6_6ycbc")

[node name="ResetButton" type="Button" parent="Level"]
offset_left = 353.0
offset_top = 576.0
offset_right = 404.0
offset_bottom = 628.0
text = "Reset"
script = ExtResource("7_xhf50")

[node name="BackButton" type="Button" parent="Level"]
offset_left = 6.0
offset_top = 5.0
offset_right = 51.0
offset_bottom = 36.0
text = "Back"
script = ExtResource("8_431yg")

[node name="SubmitButton" type="Button" parent="Level"]
offset_left = 1001.0
offset_top = 571.0
offset_right = 1100.0
offset_bottom = 623.0
theme_override_fonts/font = ExtResource("3_pl8dh")
theme_override_font_sizes/font_size = 21
text = "Submit"
script = ExtResource("9_spsad")

[connection signal="text_changed" from="Level/RichTextLabel/InputContainer/ValInput" to="Level/RichTextLabel/InputContainer/ValInput" method="_on_text_changed"]
[connection signal="text_submitted" from="Level/RichTextLabel/InputContainer/ValInput" to="Level/RichTextLabel/InputContainer/ValInput" method="_on_text_submitted"]
[connection signal="text_changed" from="Level/RichTextLabel/InputContainer2/ValInput" to="Level/RichTextLabel/InputContainer2/ValInput" method="_on_text_changed"]
[connection signal="text_submitted" from="Level/RichTextLabel/InputContainer2/ValInput" to="Level/RichTextLabel/InputContainer2/ValInput" method="_on_text_submitted"]
[connection signal="text_changed" from="Level/RichTextLabel/InputContainer3/ValInput" to="Level/RichTextLabel/InputContainer3/ValInput" method="_on_text_changed"]
[connection signal="text_submitted" from="Level/RichTextLabel/InputContainer3/ValInput" to="Level/RichTextLabel/InputContainer3/ValInput" method="_on_text_submitted"]
